# probabilistic-cost-modelling-article

./: .gitignore  README.md  pyproject.toml  requirements.txt  roadmap-probabilistic-cost-modelling-v1.md
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/setup/: issues.sh  labels.sh  milestones.sh
article/: probabilistic-cost-modelling-ptbr.md  probabilistic-cost-modelling.md
docs/: model-design.md  outline.md  thesis.md
exercises/: ex01_distribution_families.md  ex02_mle.md  ex03_model_comparison.md  ex04_mixture_models.md  ex05_heavy_tails.md
notebooks/: 01_distribution_families.ipynb  02_mle_estimation.ipynb  03_model_comparison.ipynb  04_mixture_models.ipynb  05_heavy_tails.ipynb  06_budget_impact.ipynb
notes/: phase1-distributions.md  phase2-mle.md  phase3-model-comparison.md  phase4-mixture.md  phase5-heavy-tails.md
scripts/: exp_distribution_zoo.py  exp_full_pipeline.py  exp_heavy_tail_risk.py  exp_mixture_detection.py  exp_mle_convergence.py  exp_model_comparison.py  exp_wrong_distribution.py
src/: __init__.py  budget_impact.py  data_gen.py  distributions.py  fitting.py  heavy_tails.py  mixture.py  model_selection.py
tests/: test_budget_impact.py  test_data_gen.py  test_distributions.py  test_fitting.py  test_heavy_tails.py  test_mixture.py  test_model_selection.py
til/: index.md  til-phase-1-lognormal-trick.md  til-phase-1-not-all-positive-data-is-normal.md  til-phase-2-fisher-information-as-curvature.md  til-phase-2-why-mle-variance-is-biased.md  til-phase-3-aic-vs-bic-when-they-disagree.md  til-phase-3-akaike-weights-as-probability.md  til-phase-4-em-as-coordinate-ascent-on-elbo.md  til-phase-4-the-average-employee-does-not-exist.md  til-phase-5-138x-what-normal-hides.md  til-phase-5-pareto-tail-ratio-is-constant.md  til-phase-5-why-mgf-fails-for-pareto.md  til-phase-6-aic-consistency-vs-sample-size.md  til-phase-6-fixed-seeds-and-reproducibility.md
