[project]
name = "probabilistic-cost-modelling"
version = "0.1.0"
description = "Technical article: probabilistic modelling of people costs"
authors = [
    { name = "Bruno Ramos Martins" },
]
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=2.1",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "pandas>=2.2",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
