[project]
name = "probabilistic-cost-modelling"
version = "0.1.0"
description = "Technical article: probabilistic modelling of people costs"
authors = [
    { name = "Bruno Ramos Martins" },
]
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=2.1",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "pandas>=2.2",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B905",  # zip() without strict — verbose for short scripts
]

[tool.ruff.lint.per-file-ignores]
# Notebooks: relaxed rules for exploratory code
"notebooks/*" = [
    "E402",   # module-level imports not at top of cell (cells legitimately do this)
    "F401",   # unused imports (kept for documentation/future use)
    "F811",   # redefinition (cell re-imports are fine)
    "F541",   # f-string without placeholders (often used for formatting consistency)
    "I001",   # import sorting (cells aren't files)
    "N816",   # mixedCase variable names (math convention: K, N_k, etc)
    "SIM300", # Yoda conditions (readability preference)
]

# Mathematical modules: allow K, N_k, optimal_K, select_K matching the article's notation
"src/mixture.py" = [
    "N802",   # function names lowercase (select_K matches K in math notation)
    "N803",   # argument names lowercase (K is the standard in mixture model literature)
    "N806",   # variable names lowercase (N_k, K_range follow textbook convention)
    "N815",   # mixedCase in class scope (optimal_K)
]

# Tests: allow same math conventions
"tests/*" = [
    "N806",   # K, optimal_K in tests mirror src naming
    "F401",   # unused imports (e.g. pytest fixtures)
    "E712",   # == True for explicit boolean asserts
]

# Scripts: lambdas and unused control variables OK in standalone scripts
"scripts/*" = [
    "E731",   # lambda assignments (concise CDF wrappers)
    "B007",   # unused loop variables in replication loops
    "F541",   # f-string without placeholders (header prints)
    "N806",   # K, Ks in plotting code
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
